ecmascript/parser/tests/test262-error-references/fail/0dbe57298be12eac.js.stderr
error: TS1009
 --> $DIR/tests/test262-parser/fail/0dbe57298be12eac.js:1:6
  |
1 | var x,;
  |      ^

